--- a/single-food/index.html
+++ b/single-food/index.html
@@ -3,35 +3,141 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Scrollable Box Layout</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="wrapper">
-      <img src="food.jpg" class="header-image"/>
-        <div class="description">
-          <h1>Cheese Burger</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas natus
-            vitae suscipit sequi voluptatum fugiat ut quia, illo non
-            repudiandae?
-          </p>
-          <br />
-          <div class="button-container" >
-            <div class="counter">
-              <button class="minus">-</button>
-              <span class="count">1</span>
-              <button class="plus">+</button>
-            </div>
-            <button>
-              <div class="button">
-                <p>Add to Cart</p>
-                <p>250 ETB</p>
-              </div>
-            </button>
-          </div>
+    <div class="container">
+      <div class="scrollable-cards">
+        <img src="food.jpg" alt="food-image" class="main-food-image" />
+        <p class="main-food-name">Melting Cheese Pizza</p>
+        <div style="display: flex; margin-left: 10px; margin-bottom: 10px">
+          <span style="font-size: medium; color: #7c8083; margin-right: 15px"
+            >Pizza Italiano</span
+          >
+          <span style="font-size: medium; color: #7c8083">4.8 (2.2k)</span>
         </div>
-      
-    
+        <!-- List of smaller boxes -->
+        <p class="recommendation">Want Some More?</p>
+        <a href="google.com" class="food-card">
+          <div class="avatar-container">
+            <img
+              src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?q=80&w=1000"
+              alt="food-image"
+              class="avatar"
+            />
+          </div>
+          <div class="food-content">
+            <div class="food-header">
+              <p class="food-name">Chicken Biriyani</p>
+            </div>
+            <div class="food-price-container">
+              <div class="food-price">
+                <div class="currency-container">
+                  <span class="currency">ETB</span>
+                </div>
+                <span class="price">500</span>
+              </div>
+            </div>
+          </div>
+        </a>
+        <a href="google.com" class="food-card">
+          <div class="avatar-container">
+            <img
+              src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?q=80&w=1000"
+              alt="food-image"
+              class="avatar"
+            />
+          </div>
+          <div class="food-content">
+            <div class="food-header">
+              <p class="food-name">Chicken Biriyani</p>
+            </div>
+            <div class="food-price-container">
+              <div class="food-price">
+                <div class="currency-container">
+                  <span class="currency">ETB</span>
+                </div>
+                <span class="price">500</span>
+              </div>
+            </div>
+          </div>
+        </a>
+        <a href="google.com" class="food-card">
+          <div class="avatar-container">
+            <img
+              src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?q=80&w=1000"
+              alt="food-image"
+              class="avatar"
+            />
+          </div>
+          <div class="food-content">
+            <div class="food-header">
+              <p class="food-name">Chicken Biriyani</p>
+            </div>
+            <div class="food-price-container">
+              <div class="food-price">
+                <div class="currency-container">
+                  <span class="currency">ETB</span>
+                </div>
+                <span class="price">500</span>
+              </div>
+            </div>
+          </div>
+        </a>
+        <a href="google.com" class="food-card">
+          <div class="avatar-container">
+            <img
+              src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?q=80&w=1000"
+              alt="food-image"
+              class="avatar"
+            />
+          </div>
+          <div class="food-content">
+            <div class="food-header">
+              <p class="food-name">Chicken Biriyani</p>
+            </div>
+            <div class="food-price-container">
+              <div class="food-price">
+                <div class="currency-container">
+                  <span class="currency">ETB</span>
+                </div>
+                <span class="price">500</span>
+              </div>
+            </div>
+          </div>
+        </a>
+        <a href="google.com" class="food-card">
+          <div class="avatar-container">
+            <img
+              src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?q=80&w=1000"
+              alt="food-image"
+              class="avatar"
+            />
+          </div>
+          <div class="food-content">
+            <div class="food-header">
+              <p class="food-name">Chicken Biriyani</p>
+            </div>
+            <div class="food-price-container">
+              <div class="food-price">
+                <div class="currency-container">
+                  <span class="currency">ETB</span>
+                </div>
+                <span class="price">500</span>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="checkout-container">
+        <div class="quantity-control">
+          <button class="minus-button">-</button>
+          <span class="quantity">2</span>
+          <button class="plus-button">+</button>
+        </div>
+        <button class="add-to-cart-button">Add to Cart - ETB3550</button>
+      </div>
+    </div>
   </body>
 </html>
