single-food modif

--- a/single-food/index.html
+++ b/single-food/index.html
@@ -11,6 +11,7 @@
       <div class="scrollable-cards">
         <img src="food.jpg" alt="food-image" class="main-food-image" />
         <p class="main-food-name">Melting Cheese Pizza</p>
+        <p class="main-food-price">ETB500</p>
         <div style="display: flex; margin-left: 10px; margin-bottom: 10px">
           <span style="font-size: medium; color: #7c8083; margin-right: 15px"
             >Pizza Italiano</span
