specials-add-to-cart class rename

--- a/home-page/index.html
+++ b/home-page/index.html
@@ -36,7 +36,7 @@
             </view>
             <view class="actions">
               <p class="delivery-time">30-40 min</p>
-              <button class="add-to-cart">+</button>
+              <button class="specials-add-to-cart">+</button>
             </view>
           </navigator>
           <navigator
@@ -58,7 +58,7 @@
             </view>
             <view class="actions">
               <p class="delivery-time">30-40 min</p>
-              <button class="add-to-cart">+</button>
+              <button class="specials-add-to-cart">+</button>
             </view>
           </navigator>
           <navigator
@@ -80,7 +80,7 @@
             </view>
             <view class="actions">
               <p class="delivery-time">30-40 min</p>
-              <button class="add-to-cart">+</button>
+              <button class="specials-add-to-cart">+</button>
             </view>
           </navigator>
           <navigator
@@ -102,7 +102,7 @@
             </view>
             <view class="actions">
               <p class="delivery-time">30-40 min</p>
-              <button class="add-to-cart">+</button>
+              <button class="specials-add-to-cart">+</button>
             </view>
           </navigator>
           <navigator
@@ -124,7 +124,7 @@
             </view>
             <view class="actions">
               <p class="delivery-time">30-40 min</p>
-              <button class="add-to-cart">+</button>
+              <button class="specials-add-to-cart">+</button>
             </view>
           </navigator>
         </div>
