--- a/checkout-page/index.html
+++ b/checkout-page/index.html
@@ -11,26 +11,20 @@
       <div class="scrollable-cards">
         <!-- List of smaller boxes -->
         <a href="google.com" class="food-card">
-          <div class="avatar-container">
+          <div class="food-img">
             <img
               src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?q=80&w=1000"
               alt="food-image"
               class="avatar"
             />
           </div>
-          <div class="food-content">
-            <div class="food-header">
-              <p class="food-name">Chicken Biriyani</p>
-              <span class="food-date">2 days ago</span>
-            </div>
-            <p class="food-text">Lorem ipsum dolor</p>
-            <div class="food-price-container">
-              <div class="food-price">
-                <div class="currency-container">
-                  <span class="currency">ETB</span>
-                </div>
-                <span class="price">500</span>
-              </div>
+          <div class="food-info">
+            <h3>Bruschetta</h3>
+            <p>
+              Toasted bread topped with fresh tomatoes, basil, and olive oil
+            </p>
+            <div class="food-footer">
+              <span class="price">$8.99</span>
               <div class="quantity-control">
                 <button class="minus-btn">-</button>
                 <span class="quantity">1</span>
@@ -40,26 +34,20 @@
           </div>
         </a>
         <a href="google.com" class="food-card">
-          <div class="avatar-container">
+          <div class="food-img">
             <img
               src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?q=80&w=1000"
               alt="food-image"
               class="avatar"
             />
           </div>
-          <div class="food-content">
-            <div class="food-header">
-              <p class="food-name">Chicken Biriyani</p>
-              <span class="food-date">2 days ago</span>
-            </div>
-            <p class="food-text">Lorem ipsum dolor</p>
-            <div class="food-price-container">
-              <div class="food-price">
-                <div class="currency-container">
-                  <span class="currency">ETB</span>
-                </div>
-                <span class="price">500</span>
-              </div>
+          <div class="food-info">
+            <h3>Bruschetta</h3>
+            <p>
+              Toasted bread topped with fresh tomatoes, basil, and olive oil
+            </p>
+            <div class="food-footer">
+              <span class="price">$8.99</span>
               <div class="quantity-control">
                 <button class="minus-btn">-</button>
                 <span class="quantity">1</span>
@@ -69,26 +57,20 @@
           </div>
         </a>
         <a href="google.com" class="food-card">
-          <div class="avatar-container">
+          <div class="food-img">
             <img
               src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?q=80&w=1000"
               alt="food-image"
               class="avatar"
             />
           </div>
-          <div class="food-content">
-            <div class="food-header">
-              <p class="food-name">Chicken Biriyani</p>
-              <span class="food-date">2 days ago</span>
-            </div>
-            <p class="food-text">Lorem ipsum dolor</p>
-            <div class="food-price-container">
-              <div class="food-price">
-                <div class="currency-container">
-                  <span class="currency">ETB</span>
-                </div>
-                <span class="price">500</span>
-              </div>
+          <div class="food-info">
+            <h3>Bruschetta</h3>
+            <p>
+              Toasted bread topped with fresh tomatoes, basil, and olive oil
+            </p>
+            <div class="food-footer">
+              <span class="price">$8.99</span>
               <div class="quantity-control">
                 <button class="minus-btn">-</button>
                 <span class="quantity">1</span>
@@ -98,26 +80,20 @@
           </div>
         </a>
         <a href="google.com" class="food-card">
-          <div class="avatar-container">
+          <div class="food-img">
             <img
               src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?q=80&w=1000"
               alt="food-image"
               class="avatar"
             />
           </div>
-          <div class="food-content">
-            <div class="food-header">
-              <p class="food-name">Chicken Biriyani</p>
-              <span class="food-date">2 days ago</span>
-            </div>
-            <p class="food-text">Lorem ipsum dolor</p>
-            <div class="food-price-container">
-              <div class="food-price">
-                <div class="currency-container">
-                  <span class="currency">ETB</span>
-                </div>
-                <span class="price">500</span>
-              </div>
+          <div class="food-info">
+            <h3>Bruschetta</h3>
+            <p>
+              Toasted bread topped with fresh tomatoes, basil, and olive oil
+            </p>
+            <div class="food-footer">
+              <span class="price">$8.99</span>
               <div class="quantity-control">
                 <button class="minus-btn">-</button>
                 <span class="quantity">1</span>
@@ -127,26 +103,43 @@
           </div>
         </a>
         <a href="google.com" class="food-card">
-          <div class="avatar-container">
+          <div class="food-img">
             <img
               src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?q=80&w=1000"
               alt="food-image"
               class="avatar"
             />
           </div>
-          <div class="food-content">
-            <div class="food-header">
-              <p class="food-name">Chicken Biriyani</p>
-              <span class="food-date">2 days ago</span>
-            </div>
-            <p class="food-text">Lorem ipsum dolor</p>
-            <div class="food-price-container">
-              <div class="food-price">
-                <div class="currency-container">
-                  <span class="currency">ETB</span>
-                </div>
-                <span class="price">500</span>
+          <div class="food-info">
+            <h3>Bruschetta</h3>
+            <p>
+              Toasted bread topped with fresh tomatoes, basil, and olive oil
+            </p>
+            <div class="food-footer">
+              <span class="price">$8.99</span>
+              <div class="quantity-control">
+                <button class="minus-btn">-</button>
+                <span class="quantity">1</span>
+                <button class="add-btn">+</button>
               </div>
+            </div>
+          </div>
+        </a>
+        <a href="google.com" class="food-card">
+          <div class="food-img">
+            <img
+              src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?q=80&w=1000"
+              alt="food-image"
+              class="avatar"
+            />
+          </div>
+          <div class="food-info">
+            <h3>Bruschetta</h3>
+            <p>
+              Toasted bread topped with fresh tomatoes, basil, and olive oil
+            </p>
+            <div class="food-footer">
+              <span class="price">$8.99</span>
               <div class="quantity-control">
                 <button class="minus-btn">-</button>
                 <span class="quantity">1</span>
